--- a/index.html
+++ b/index.html
@@ -6,10 +6,42 @@
 	<title>laura-gyr.ch</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 </head>
 
 <body>
-	<h3>test</h3>
+	<div class="intro">
+		<div class="menubar">
+		</div>
+	</div>
+	<div id="container">
+		<div id="containerscroll">
+	    <div class="box one">
+				<div>
+					<h3>— 2018</h3>
+					<h2>Refugees in Europe</h2>
+					<h3>data visualization</h3>
+				</div>
+			</div>
+	    <div class="box two">
+				<div>
+					<h3>— 2018</h3>
+					<h2>Life of Bees</h2>
+					<h3>educational animation video</h3>
+				</div>
+			</div>
+	    <div class="box three">
+				<div>
+					<h3>— 2017</h3>
+					<h2>Der rote Faden</h2>
+					<h3>interactive website</h3>
+				</div>
+			</div>
+	  </div>
+	</div>
+
+
+
 
 			<!--<script src="js/scroll.js" type="text/javascript"></script>-->
 
