--- a/about.html
+++ b/about.html
@@ -3,17 +3,27 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>laura-gyr.ch</title>
+	<title>about me</title>
 
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/cv.css">
 </head>
 
 <body>
-	<div class="intro">
-		<div class="menubar">
-		</div>
-	</div>
+<div class="menubar">
+</div>
+<div class="about">
+  <h3>I'm laura, a digital ideation student who's passionate about technology, animation and typography. My work is very wide-spread when it comes to TOPIC and technology.</h3>
+  <div class="button cv">
+    <p>see my CV<br>>></p>
+  </div>
+  <div class="button mail">
+    <p>email me<br>>></p>
+  </div>
+  <div class="footnote">
+    <p><span>concept, design and code</span> of this website by myself</p>
+  </div>
+</div>
 
 
 
