--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>laura-gyr.ch</title>
 
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 </head>
 
