--- a/REF.html
+++ b/REF.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <div class="menubar">
-  </div>
-  <div class="content">
+  <div class="menubar"></div>
+  <div class="menucircle"></div>
+
     <div class="left">
       <h3>– 2018</h3>
       <h2>Refugees in Europe</h2>
@@ -30,10 +30,41 @@
     </div>
 
     <div class="project">
-
+      <img src="assets/projects/Ref1.png">
+      <img src="assets/projects/Ref3.png">
+      <img src="assets/projects/Ref2.png">
     </div>
 
+<div class="next">
+  <div>
+    <h3>next project<br>>></h3>
   </div>
+  <div></div>
+</div>
+
+<div class="footer">
+  <div></div>
+  <div>
+    <h3>about</h3>
+    <p></p>
+  </div>
+  <div>
+    <h3>projects</h3>
+    <p>I’m a graphic designer with a bachelors degree in visual communication digital ideation. you’re wondering what that is?</p>
+    <p>find out more >></p>
+  </div>
+  <div>
+    <h3>contact</h3>
+    <p>find me on social media or write me an email. I’d love to work with you!</p>
+    <p>mail >></p>
+    <div>
+      <img src="assets/icons/social-behance.png">
+      <img src="assets/icons/social-insta.png">
+      <img src="assets/icons/social-github.png">
+      <img src="assets/icons/social-twitter.png">
+    </div>
+  </div>
+</div>
 
 </body>
 
