improved some code on homepage

--- a/index.html
+++ b/index.html
@@ -6,37 +6,51 @@
 	<title>laura-gyr.ch</title>
 
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
-	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">-->
+	<link rel="stylesheet" type="text/css" href="css/mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/intro.css">
 </head>
 
 <body>
 	<div class="intro">
 		<div class="menubar">
 		</div>
+		<p>hej there!</p>
 	</div>
 	<div id="container">
 		<div id="containerscroll">
-	    <div class="box one">
+
+	    <div class="box violet">
+				<div class="cover one">
+				</div>
 				<div>
 					<h3>— 2018</h3>
-					<h2>Refugees in Europe</h2>
+					<h2>Refugees in<br>Europe</h2>
 					<h3>data visualization</h3>
 				</div>
 			</div>
-	    <div class="box two">
+
+	    <div class="box yellow">
+				<div class="cover two">
+				</div>
 				<div>
 					<h3>— 2018</h3>
 					<h2>Life of Bees</h2>
 					<h3>educational animation video</h3>
 				</div>
 			</div>
-	    <div class="box three">
+
+	    <div class="box violet">
+				<div class="cover three">
+				</div>
 				<div>
 					<h3>— 2017</h3>
 					<h2>Der rote Faden</h2>
 					<h3>interactive website</h3>
 				</div>
 			</div>
+
+
 	  </div>
 	</div>
 
