added viewport metatag

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>laura-gyr.ch</title>
 
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
-	<!--<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">-->
-	<link rel="stylesheet" type="text/css" href="css/mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/mobile.css">-->
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
 </head>
 
