fixed some responsive-paddings and design for responsive

--- a/REF.html
+++ b/REF.html
@@ -26,9 +26,12 @@
         <p>HTML, CSS, JS | Illustrator</p>
       </div>
     </div>
+    </div>
     <div class="right">
       <h1>How does the number of refugees compare to the number of citizens in each European country, and where did they come from?</h1>
+      <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out the prototype!</a>
     </div>
+
 
     <div class="project">
       <img src="assets/projects/Ref1.png">
