fixed horizontal scroll, pictures, text and color-wrap

--- a/REF.html
+++ b/REF.html
@@ -29,7 +29,7 @@
     </div>
     <div class="right">
       <h1>How does the number of refugees compare to the number of citizens in each European country, and where did they come from?</h1>
-      <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out the prototype!</a>
+      <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out project</a>
     </div>
 
 
@@ -50,22 +50,21 @@
   <div></div>
   <div>
     <h3>about</h3>
-    <p></p>
+    <p>what do I do for a living?</p>
   </div>
   <div>
     <h3>projects</h3>
     <p>I’m a graphic designer with a bachelors degree in visual communication digital ideation. you’re wondering what that is?</p>
-    <p>find out more >></p>
   </div>
   <div>
     <h3>contact</h3>
     <p>find me on social media or write me an email. I’d love to work with you!</p>
-    <p>mail >></p>
     <div>
-      <img src="assets/icons/social-behance.png">
+      <img src="assets/icons/mail.png">
       <img src="assets/icons/social-insta.png">
       <img src="assets/icons/social-github.png">
       <img src="assets/icons/social-twitter.png">
+      <img src="assets/icons/social-behance.png">
     </div>
   </div>
 </div>
