--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
-	<!--<link rel="stylesheet" type="text/css" href="css/mobile.css">-->
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
 </head>
 
@@ -21,44 +20,56 @@
 	<div id="container">
 		<div id="containerscroll">
 
-	    <div class="box violet">
+			<div class="boxwrapper">
 				<div class="cover one">
 				</div>
-				<div>
+
+				<div class="box violet">
+				</div>
+
+				<div class="info">
 					<h3>— 2018</h3>
-					<h2>Refugees in<br>Europe</h2>
+					<h2>Refugees in Europe</h2>
 					<h3>data visualization</h3>
 				</div>
 			</div>
 
-	    <div class="box yellow">
+			<div class="boxwrapper">
 				<div class="cover two">
 				</div>
-				<div>
+
+				<div class="box yellow">
+				</div>
+
+				<div class="info">
 					<h3>— 2018</h3>
 					<h2>Life of Bees</h2>
 					<h3>educational animation video</h3>
 				</div>
 			</div>
 
-	    <div class="box violet">
+			<div class="boxwrapper">
 				<div class="cover three">
 				</div>
-				<div>
+
+				<div class="box violet">
+				</div>
+
+				<div class="info">
 					<h3>— 2017</h3>
 					<h2>Der rote Faden</h2>
 					<h3>interactive website</h3>
 				</div>
 			</div>
 
-
-	  </div>
+		</div>
 	</div>
 
 
 
 
-			<!--<script src="js/scroll.js" type="text/javascript"></script>-->
+	<!--<script src="js/scroll.js" type="text/javascript"></script>-->
 
 </body>
+
 </html>
