added links on site

--- a/REF.html
+++ b/REF.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-  <div class="menubar"></div>
-  <div class="menucircle"></div>
+  <div class="menubar">
+  <a href="about.html"></a>
+</div>
+  <div class="menucircle">
+  <a href="index.html"></a>
+</div>
 
     <div class="left">
       <h3>– 2018</h3>
@@ -41,6 +45,7 @@
 
 <div class="next">
   <div>
+    <a href="BEES.html"> </a>
     <h3>next project<br>>></h3>
   </div>
   <div></div>
@@ -49,22 +54,22 @@
 <div class="footer">
   <div></div>
   <div>
-    <h3>about</h3>
+    <a href="about.html"><h3>about</h3></a>
     <p>what do I do for a living?</p>
   </div>
   <div>
-    <h3>projects</h3>
+    <a href="index.html"><h3>projects</h3></a>
     <p>I’m a graphic designer with a bachelors degree in visual communication digital ideation. you’re wondering what that is?</p>
   </div>
   <div>
     <h3>contact</h3>
     <p>find me on social media or write me an email. I’d love to work with you!</p>
     <div>
-      <img src="assets/icons/mail.png">
-      <img src="assets/icons/social-insta.png">
-      <img src="assets/icons/social-github.png">
-      <img src="assets/icons/social-twitter.png">
-      <img src="assets/icons/social-behance.png">
+      <a href="mailto:hej@laura-gyr.ch"><img src="assets/icons/mail.png"></a>
+      <a href="https://www.instagram.com/lauragyr/"><img src="assets/icons/social-insta.png"></a>
+      <a href="https://github.com/lauragyr"><img src="assets/icons/social-github.png"></a>
+      <a href="https://twitter.com/loerih?lang=en"><img src="assets/icons/social-twitter.png"></a>
+      <a href="https://www.behance.net/lauragyra1b8"><img src="assets/icons/social-behance.png"></a>
     </div>
   </div>
 </div>
