--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 
 <body>
 <div class="menubar">
+	<a href="index.html"></a>
 </div>
 <div class="about">
   <h3>I'm laura, a digital ideation student who's passionate about technology, animation and typography. My work is very wide-spread when it comes to TOPIC and technology.</h3>
@@ -19,6 +20,7 @@
     <p>see my CV<br>>></p>
   </div>
   <div class="button mail">
+		<a href="mailto:hej@laura-gyr.ch"></a>
     <p>email me<br>>></p>
   </div>
   <div class="footnote">
