--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 <body>
 	<div class="intro">
 		<div class="menubar">
+			<a href="about.html"></a>
 		</div>
 		<p>hej there!</p>
+		<div id="scroll">
+			<h3>scroll</h3>
+		</div>
 	</div>
 	<div id="container">
 		<div id="containerscroll">
 
 			<div class="boxwrapper">
+				<a href="REF.html">
 				<div class="cover one">
 				</div>
 
@@ -32,9 +37,11 @@
 					<h2>Refugees in Europe</h2>
 					<h3>data visualization</h3>
 				</div>
+				</a>
 			</div>
 
 			<div class="boxwrapper">
+				<a href="BEES.html">
 				<div class="cover two">
 				</div>
 
@@ -46,9 +53,11 @@
 					<h2>Life of Bees</h2>
 					<h3>educational animation video</h3>
 				</div>
+				</a>
 			</div>
 
 			<div class="boxwrapper">
+				<a href="FADEN.html">
 				<div class="cover three">
 				</div>
 
@@ -60,6 +69,7 @@
 					<h2>Der rote Faden</h2>
 					<h3>interactive website</h3>
 				</div>
+			</a>
 			</div>
 
 		</div>
