--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 	</div>
 
 
-
-
-	<!--<script src="js/scroll.js" type="text/javascript"></script>-->
+	<script src="js/scroll.js" type="text/javascript"></script>
 
 </body>
 
