added menu-animation.js, changed menu bar into an id

--- a/REF.html
+++ b/REF.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <div class="menubar">
+  <div id="menubar">
   <a href="about.html"></a>
 </div>
-  <div class="menucircle">
+  <div id="menucircle">
   <a href="index.html"></a>
 </div>
 
