--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="intro">
-		<div class="menubar">
+		<div id="menubar">
 			<a href="about.html"></a>
 		</div>
 		<p>hej there!</p>
@@ -77,6 +77,8 @@
 
 
 	<script src="js/scroll.js" type="text/javascript"></script>
+	<script src="js/menu-animation.js" type="text/javascript"></script>
+
 
 </body>
 
