--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-	<div class="intro">
-		<div id="menubar">
-			<a href="about.html"></a>
-		</div>
+	<div class="intro" id="intro">
+		<div id="menubar" onclick="switchOnClick()"></div>
 		<p>hej there!</p>
 		<div id="scroll">
 			<h3>scroll</h3>
@@ -24,7 +22,7 @@
 	<div id="container">
 		<div id="containerscroll">
 
-			<div class="boxwrapper">
+			<div class="boxwrapper" id="box1">
 				<a href="REF.html">
 				<div class="cover one">
 				</div>
@@ -40,7 +38,7 @@
 				</a>
 			</div>
 
-			<div class="boxwrapper">
+			<div class="boxwrapper" id="box2">
 				<a href="BEES.html">
 				<div class="cover two">
 				</div>
@@ -56,7 +54,7 @@
 				</a>
 			</div>
 
-			<div class="boxwrapper">
+			<div class="boxwrapper" id="box3">
 				<a href="FADEN.html">
 				<div class="cover three">
 				</div>
@@ -78,7 +76,6 @@
 
 	<script src="js/scroll.js" type="text/javascript"></script>
 	<script src="js/menu-animation.js" type="text/javascript"></script>
-
 
 </body>
 
