animated all the menus, added intro-animation-tests (metaballs)

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
+	<link rel="stylesheet" type="text/css" href="css/intro-animation.css">
 </head>
 
 <body>
 	<div class="intro" id="intro">
-		<div id="menubar" onclick="switchOnClick()"></div>
+		<div id="menubar" onclick="switchViolet()"></div>
 		<p>hej there!</p>
+		<div class="wrap">
+  <div class="meta"></div>
+  <div class="meta"></div>
+</div>
 		<div id="scroll">
 			<h3>scroll</h3>
 		</div>
