--- a/REF.html
+++ b/REF.html
@@ -11,12 +11,8 @@
 </head>
 
 <body>
-  <div id="menubar">
-  <a href="about.html"></a>
-</div>
-  <div id="menucircle">
-  <a href="index.html"></a>
-</div>
+  <div id="menubar" onclick="switchViolet()"></div>
+  <div id="menucircle" onclick="switchCircle()"></div>
 
     <div class="left">
       <h3>– 2018</h3>
@@ -74,6 +70,7 @@
   </div>
 </div>
 
+<script src="js/menu-animation.js" type="text/javascript"></script>
 </body>
 
 </html>
