--- a/about.html
+++ b/about.html
@@ -10,10 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="css/cv.css">
 </head>
 
-<body>
-<div id="menubar">
-	<a href="index.html"></a>
-</div>
+<body onload="document.body.style.opacity='1'">
+<div id="menubar" onclick="switchWhite()"></div>
 <div class="about">
   <h3>I'm laura, a digital ideation student who's passionate about technology, animation and typography. My work is very wide-spread when it comes to TOPIC and technology.</h3>
   <div class="button cv">
@@ -28,11 +26,6 @@
   </div>
 </div>
 
-
-
-
-
-			<!--<script src="js/scroll.js" type="text/javascript"></script>-->
-
+			<script src="js/menu-animation.js" type="text/javascript"></script>
 </body>
 </html>
