added ease-transitions on pageload

--- a/REF.html
+++ b/REF.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/projects.css">
 </head>
 
-<body>
+<body onload="document.body.style.opacity='1'">
   <div id="menubar" onclick="switchViolet()"></div>
   <div id="menucircle" onclick="switchCircle()"></div>
 
