--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
-	<link rel="stylesheet" type="text/css" href="css/intro-animation.css">
 </head>
 
-<body>
-	<div class="intro" id="intro">
+<body onload="document.body.style.opacity='1'">
+	<div class="intro">
 		<div id="menubar" onclick="switchViolet()"></div>
 		<p>hej there!</p>
-		<div class="wrap">
-  <div class="meta"></div>
-  <div class="meta"></div>
-</div>
+		<!--<div class="wrap">
+  		<div class="meta"></div>
+  		<div class="meta"></div>
+		</div>-->
 		<div id="scroll">
 			<h3>scroll</h3>
 		</div>
@@ -29,59 +28,58 @@
 
 			<div class="boxwrapper" id="box1">
 				<a href="REF.html">
-				<div class="cover one">
-				</div>
+					<div class="cover one">
+					</div>
 
-				<div class="box violet">
-				</div>
+					<div class="box violet">
+					</div>
 
-				<div class="info">
-					<h3>— 2018</h3>
-					<h2>Refugees in Europe</h2>
-					<h3>data visualization</h3>
-				</div>
+					<div class="info">
+						<h3>— 2018</h3>
+						<h2>Refugees in Europe</h2>
+						<h3>data visualization</h3>
+					</div>
 				</a>
 			</div>
 
 			<div class="boxwrapper" id="box2">
 				<a href="BEES.html">
-				<div class="cover two">
-				</div>
+					<div class="cover two">
+					</div>
 
-				<div class="box yellow">
-				</div>
+					<div class="box yellow">
+					</div>
 
-				<div class="info">
-					<h3>— 2018</h3>
-					<h2>Life of Bees</h2>
-					<h3>educational animation video</h3>
-				</div>
+					<div class="info">
+						<h3>— 2018</h3>
+						<h2>Life of Bees</h2>
+						<h3>educational animation video</h3>
+					</div>
 				</a>
 			</div>
 
 			<div class="boxwrapper" id="box3">
 				<a href="FADEN.html">
-				<div class="cover three">
-				</div>
+					<div class="cover three">
+					</div>
 
-				<div class="box violet">
-				</div>
+					<div class="box violet">
+					</div>
 
-				<div class="info">
-					<h3>— 2017</h3>
-					<h2>Der rote Faden</h2>
-					<h3>interactive website</h3>
-				</div>
-			</a>
+					<div class="info">
+						<h3>— 2017</h3>
+						<h2>Der rote Faden</h2>
+						<h3>interactive website</h3>
+					</div>
+				</a>
 			</div>
 
 		</div>
 	</div>
 
 
-	<script src="js/scroll.js" type="text/javascript"></script>
+	<!--<script src="js/scroll.js" type="text/javascript"></script>-->
 	<script src="js/menu-animation.js" type="text/javascript"></script>
-
 </body>
 
 </html>
