changed names of index-files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div id="containerscroll">
 
 			<div class="boxwrapper" id="box1">
-				<a href="REF.html">
+				<a href="proj_ref.html">
 					<div class="cover one">
 					</div>
 
@@ -43,7 +43,7 @@
 			</div>
 
 			<div class="boxwrapper" id="box2">
-				<a href="BEES.html">
+				<a href="proj_bees.html">
 					<div class="cover two">
 					</div>
 
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="boxwrapper" id="box3">
-				<a href="FADEN.html">
+				<a href="proj_faden.html">
 					<div class="cover three">
 					</div>
 
