--- a/proj_ref.html
+++ b/proj_ref.html
@@ -41,7 +41,7 @@
 
 <div class="next">
   <div>
-    <a href="BEES.html"> </a>
+    <a href="proj_bees.html"> </a>
     <h3>next project<br>>></h3>
   </div>
   <div></div>
