--- a/proj_ref.html
+++ b/proj_ref.html
@@ -15,10 +15,10 @@
   <div id="menubar" onclick="switchViolet()"></div>
   <div id="menucircle" onclick="switchCircle()"></div>
 
-  <div class="left">
+  <div class="left wow slideInUp"">
     <h3>– 2018</h3>
     <h2>Refugees in Europe</h2>
-    <div class="facts">
+    <div class="facts wow slideInUp">
       <p class="bold">type of project:</p>
       <p>data visualization</p>
     </div>
@@ -28,7 +28,7 @@
     </div>
   </div>
   </div>
-  <div class="right">
+  <div class="right wow slideInUp">
     <h1>How does the number of refugees compare to the number of citizens in each European country, and where did they
       come from?</h1>
     <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out project</a>
@@ -53,15 +53,21 @@
 
   <div class="footer">
     <div>
+      <div id="f1">
       <a href="about.html">
         <h3>about</h3>
       </a>
+      </div>
+      <div id="f2">
       <a href="index.html#containerscroll">
         <h3>projects</h3>
-      </a>
+       </a>
+      </div>
+      <div id="f3">
       <a href="mailto:hej@laura-gyr.ch">
         <h3>contact</h3>
       </a>
+      </div>
     </div>
     <div>
       <a href="https://www.instagram.com/lauragyr/" target="_blank"><img src="assets/icons/social-insta.png"></a>
