--- a/index.html
+++ b/index.html
@@ -10,85 +10,110 @@
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
 	<link rel="stylesheet" type="text/css" href="plugins/fullpage.css">
-	<link rel="stylesheet" type="text/css" href="plugins/animate.css">
 </head>
 
 <body onload="document.body.style.opacity='1'">
-	<div class="intro">
-		<div id="menubar" onclick="switchViolet()"></div>
-		<p class="wow slideInUp">hej there!</p>
-		<div id="animation">
-		<svg onload="document.body.style.opacity='1'" id="Ebene_1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="663" height="686" viewBox="0 0 663 686">
-			<circle cx="315" cy="355" r="267" fill="#fadd02" stroke="#fff" stroke-miterlimit="10" stroke-width="8"/>
-		  </svg>
-		  <svg onload="document.body.style.opacity='1'" id="Ebene_1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="500" height="686" viewBox="0 0 663 686">
-			<circle cx="315" cy="355" r="267" fill="#fadd02" stroke="#fff" stroke-miterlimit="10" stroke-width="8"/>
-		  </svg>
+	<div id="menubar" onclick="switchViolet()"></div>
+	<div id="fullpage">
+		<div class="intro section">
+			<p>hej there!</p>
+
+			<div id="animation">
+				<div>
+					<svg id="bubble1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					  <svg id="bubble2" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					  <svg id="bubble3" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="550" height="550" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					</div>
+					<div>
+					  <svg id="bubble4" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					  <svg id="bubble5" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					  <svg id="bubble6" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 660 660">
+						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
+					  </svg>
+					</div>
+			</div>
+
+			<div id="scroll">
+				<h3>scroll</h3>
+			</div>
 		</div>
-		  
-		<div id="scroll">
-			<h3>scroll</h3>
+
+		<div id="container" class="section">
+			<div id="containerscroll">
+
+				<div class="boxwrapper" id="box1">
+					<a href="proj_ref.html">
+						<div class="cover one">
+						</div>
+
+						<div class="box violet">
+						</div>
+
+						<div class="info">
+							<h3>— 2018</h3>
+							<h2>Refugees in Europe</h2>
+							<h3>data visualization</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="boxwrapper" id="box2">
+					<a href="proj_bees.html">
+						<div class="cover two">
+						</div>
+
+						<div class="box yellow">
+						</div>
+
+						<div class="info">
+							<h3>— 2018</h3>
+							<h2>Life of Bees</h2>
+							<h3>educational animation video</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="boxwrapper" id="box3">
+					<a href="proj_faden.html">
+						<div class="cover three">
+						</div>
+
+						<div class="box violet">
+						</div>
+
+						<div class="info">
+							<h3>— 2017</h3>
+							<h2>Der rote Faden</h2>
+							<h3>interactive website</h3>
+						</div>
+					</a>
+				</div>
+
+			</div>
 		</div>
 	</div>
-	<div id="container">
-		<div id="containerscroll">
 
-			<div class="boxwrapper" id="box1">
-				<a href="proj_ref.html">
-					<div class="cover one">
-					</div>
-
-					<div class="box violet">
-					</div>
-
-					<div class="info">
-						<h3>— 2018</h3>
-						<h2>Refugees in Europe</h2>
-						<h3>data visualization</h3>
-					</div>
-				</a>
-			</div>
-
-			<div class="boxwrapper" id="box2">
-				<a href="proj_bees.html">
-					<div class="cover two">
-					</div>
-
-					<div class="box yellow">
-					</div>
-
-					<div class="info">
-						<h3>— 2018</h3>
-						<h2>Life of Bees</h2>
-						<h3>educational animation video</h3>
-					</div>
-				</a>
-			</div>
-
-			<div class="boxwrapper" id="box3">
-				<a href="proj_faden.html">
-					<div class="cover three">
-					</div>
-
-					<div class="box violet">
-					</div>
-
-					<div class="info">
-						<h3>— 2017</h3>
-						<h2>Der rote Faden</h2>
-						<h3>interactive website</h3>
-					</div>
-				</a>
-			</div>
-
-		</div>
-	</div>
-
-	<!--<script src="js/scroll.js" type="text/javascript"></script>-->
+	<script src="js/scroll.js" type="text/javascript"></script>
 	<script src="js/menu-animation.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.js" type="text/javascript"></script>
-	<script src="plugins/wow.min.js" type="text/javascript"></script>
-	<script>new WOW().init();</script>
+	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
+	<script>
+		new fullpage('#fullpage', {
+			licenseKey: "C72E5B6D-CE994D20-99674098-179F44DF",
+			autoScrolling: true,
+			scrollHorizontally: true,
+		});
+	</script>
 </body>
 
 </html>
