--- a/proj_ref.html
+++ b/proj_ref.html
@@ -18,14 +18,15 @@
   <div class="left wow slideInUp"">
     <h3>– 2018</h3>
     <h2>Refugees in Europe</h2>
-    <div class="facts wow slideInUp">
-      <p class="bold">type of project:</p>
-      <p>data visualization</p>
-    </div>
-    <div class="facts">
-      <p class="bold">techniques:</p>
-      <p>HTML, CSS, JS | Illustrator</p>
-    </div>
+    <div class=" facts wow
+    slideInUp">
+    <p class="bold">type of project:</p>
+    <p>data visualization</p>
+  </div>
+  <div class="facts">
+    <p class="bold">techniques:</p>
+    <p>HTML, CSS, JS | Illustrator</p>
+  </div>
   </div>
   </div>
   <div class="right wow slideInUp">
@@ -47,28 +48,31 @@
       <h3>next project<br>>></h3>
     </div>
     <div>
-      <a href="#top" onclick="scrollToTop(); return:false;"></a>
+      <a href="#top" onclick="scrollToTop(); return: false;"></a>
     </div>
   </div>
 
   <div class="footer">
     <div>
-      <div id="f1">
-      <a href="about.html">
-        <h3>about</h3>
-      </a>
+      <div class="item1">
+        <a href="about.html">
+          <h3 class="new-label"><span>about</span></h3>
+        </a>
       </div>
-      <div id="f2">
-      <a href="index.html#containerscroll">
-        <h3>projects</h3>
-       </a>
+  
+      <div class="item2">
+        <a href="index.html#containerscroll">
+          <h3 class="new-label"><span>projects</span></h3>
+        </a>
       </div>
-      <div id="f3">
-      <a href="mailto:hej@laura-gyr.ch">
-        <h3>contact</h3>
-      </a>
+  
+      <div class="item3">
+        <a href="mailto:hej@laura-gyr.ch">
+          <h3 class="new-label"><span>contact</span></h3>
+        </a>
       </div>
     </div>
+
     <div>
       <a href="https://www.instagram.com/lauragyr/" target="_blank"><img src="assets/icons/social-insta.png"></a>
       <a href="https://github.com/lauragyr" target="_blank"><img src="assets/icons/social-github.png"></a>
