changed because of some errors in css

--- a/proj_ref.html
+++ b/proj_ref.html
@@ -48,7 +48,7 @@
       <h3>next project<br>>></h3>
     </div>
     <div>
-      <a href="#top" onclick="scrollToTop(); return: false;"></a>
+      <a href="#top" onclick="scrollToTop(); return false;"></a>
     </div>
   </div>
 
