--- a/index.html
+++ b/index.html
@@ -9,39 +9,23 @@
 	<link rel="stylesheet" type="text/css" href="css/generalstyles.css">
 	<link rel="stylesheet" type="text/css" href="css/horizontalscroll.css">
 	<link rel="stylesheet" type="text/css" href="css/intro.css">
+	<link rel="stylesheet" type="text/css" href="css/intro-animation.css">
 	<link rel="stylesheet" type="text/css" href="plugins/fullpage.css">
 </head>
 
-<body onload="document.body.style.opacity='1'">
+<body>
 	<div id="menubar" onclick="switchViolet()"></div>
 	<div id="fullpage">
 		<div class="intro section">
 			<p>hej there!</p>
+			<div class="bubble-4 outline-yellow"></div>
 
-			<div id="animation">
-				<div>
-					<svg id="bubble1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					  <svg id="bubble2" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					  <svg id="bubble3" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="550" height="550" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					</div>
-					<div>
-					  <svg id="bubble4" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					  <svg id="bubble5" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					  <svg id="bubble6" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 660 660">
-						<circle cx="330" cy="330" r="330" fill="#fadd02"/>
-					  </svg>
-					</div>
-			</div>
+			<!--<div id="animation">
+					<div class="bubble-1 filled-yellow"></div>
+					<div class="bubble-2 filled-yellow"></div>
+					<div class="bubble-3 outline-yellow"></div>
+
+			</div>-->
 
 			<div id="scroll">
 				<h3>scroll</h3>
@@ -113,6 +97,11 @@
 			autoScrolling: true,
 			scrollHorizontally: true,
 		});
+
+		var element = document.getElementById('container');
+
+		element.style.height = null;
+		element.style.height = null;
 	</script>
 </body>
 
