fixed scrolltotop and menutransitions

--- a/proj_ref.html
+++ b/proj_ref.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>laura-gyr.ch // projects – Refugees in Europe</title>
-  
+
   <link rel="stylesheet" type="text/css" href="css/generalstyles.css">
   <link rel="stylesheet" type="text/css" href="css/projects.css">
   <link rel="stylesheet" type="text/css" href="plugins/animate.css">
@@ -48,7 +48,7 @@
       <h3>next project<br>>></h3>
     </div>
     <div>
-      <a href="#top" onclick="scrollToTop(); return false;"></a>
+      <a href="#top" onclick="scrollToTop(); return: false;"></a>
     </div>
   </div>
 
