--- a/proj_ref.html
+++ b/proj_ref.html
@@ -15,7 +15,7 @@
   <div id="menubar" onclick="switchViolet()"></div>
   <div id="menucircle" onclick="switchCircle()"></div>
 
-  <div class="left wow slideInUp"">
+  <div class="left wow slideInUp">
     <h3>– 2018</h3>
     <h2>Refugees in Europe</h2>
     <div class=" facts wow
@@ -48,7 +48,7 @@
       <h3>next project<br>>></h3>
     </div>
     <div>
-      <a href="#top" onclick="scrollToTop(); return: false;"></a>
+      <a href="#top"></a>
     </div>
   </div>
 
@@ -81,7 +81,6 @@
   </div>
 
   <script src="js/menu-animation.js" type="text/javascript"></script>
-  <script src="js/scroll.js" type="text/javascript"></script>
   <script src="plugins/wow.min.js" type="text/javascript"></script>
   <script>new WOW().init();</script>
 
