added hover-effects to buttons

--- a/proj_ref.html
+++ b/proj_ref.html
@@ -18,15 +18,14 @@
   <div class="left wow slideInUp">
     <h3>– 2018</h3>
     <h2>Refugees in Europe</h2>
-    <div class=" facts wow
-    slideInUp">
-    <p class="bold">type of project:</p>
-    <p>data visualization</p>
-  </div>
-  <div class="facts">
-    <p class="bold">techniques:</p>
-    <p>HTML, CSS, JS | Illustrator</p>
-  </div>
+    <div class=" facts wow slideInUp">
+      <p class="bold">type of project:</p>
+      <p>data visualization</p>
+    </div>
+    <div class="facts">
+      <p class="bold">techniques:</p>
+      <p>HTML, CSS, JS | Illustrator</p>
+    </div>
   </div>
   </div>
   <div class="right wow slideInUp">
@@ -43,11 +42,11 @@
   </div>
 
   <div class="next">
-    <div class="wow slideInUp">
+    <div class="wow slideInUp nextbox">
       <a href="proj_bees.html"> </a>
       <h3>next project<br>>></h3>
     </div>
-    <div>
+    <div id="totop">
       <a href="#top"></a>
     </div>
   </div>
@@ -59,13 +58,13 @@
           <h3 class="new-label"><span>about</span></h3>
         </a>
       </div>
-  
+
       <div class="item2">
         <a href="index.html#containerscroll">
           <h3 class="new-label"><span>projects</span></h3>
         </a>
       </div>
-  
+
       <div class="item3">
         <a href="mailto:hej@laura-gyr.ch">
           <h3 class="new-label"><span>contact</span></h3>
@@ -74,9 +73,9 @@
     </div>
 
     <div>
-      <a href="https://www.instagram.com/lauragyr/" target="_blank"><img src="assets/icons/social-insta.png"></a>
-      <a href="https://github.com/lauragyr" target="_blank"><img src="assets/icons/social-github.png"></a>
-      <a href="https://www.behance.net/lauragyra1b8" target="_blank"><img src="assets/icons/social-behance.png"></a>
+      <a href="https://www.instagram.com/lauragyr/" target="_blank"><img id="icon1" src="assets/icons/social-insta.png"></a>
+      <a href="https://github.com/lauragyr" target="_blank"><img id="icon2" src="assets/icons/social-github.png"></a>
+      <a href="https://www.behance.net/lauragyra1b8" target="_blank"><img id="icon3" src="assets/icons/social-behance.png"></a>
     </div>
   </div>
 
