added new animation

--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
 	<div id="fullpage">
 		<div id="intro" class="section">
 			<p>hej there!</p>
+				<div class="bg first"></div>
+				<div class="bg second"></div>
+				<div class="bg third"></div>
 			<div id="animation">
 			<div class="circle uno"></div>
-			<div class="circle due"></div>
+			<!--<div class="circle due"></div>-->
 			<div class="circle tre"></div>
 			<div class="circle quattro"></div>
-			<div class="circle cinque"></div>
+			<!--<div class="circle cinque"></div>-->
 		</div>
 
 
 			<div id="scroll">
-				<h3>scroll</h3>
+				<h3>scroll down</h3>
 			</div>
 		</div>
 
@@ -37,12 +40,8 @@
 
 				<div class="boxwrapper" id="box1">
 					<a href="proj_ref.html">
-						<div class="cover one">
-						</div>
-
-						<div class="box violet">
-						</div>
-
+						<div class="cover one"></div>
+						<div class="box violet"></div>
 						<div class="info">
 							<h3>— 2018</h3>
 							<h2>Refugees in Europe</h2>
