changed design of intro-animation

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 	<div id="fullpage">
 		<div id="intro" class="section">
 			<p>hej there!</p>
-				<div class="bg first"></div>
+				<!--<div class="bg first"></div>
 				<div class="bg second"></div>
-				<div class="bg third"></div>
+				<div class="bg third"></div>-->
 			<div id="animation">
 			<div class="circle uno"></div>
-			<!--<div class="circle due"></div>-->
+			<div class="circle due"></div>
 			<div class="circle tre"></div>
-			<div class="circle quattro"></div>
-			<!--<div class="circle cinque"></div>-->
 		</div>
 
 
