fixed scrolling of projects for responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="plugins/fullpage.css">
 </head>
 
-<body>
+<body onload="document.body.style.opacity='1'">
 	<div id="menubar" onclick="switchViolet()"></div>
 	<div id="fullpage">
 		<div id="intro" class="section">
