deleted part of intro-anim and added a box in scroll

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
 	<div id="fullpage">
 		<div id="intro" class="section">
 			<p>hej there!</p>
-				<!--<div class="bg first"></div>
-				<div class="bg second"></div>
-				<div class="bg third"></div>-->
 			<div id="animation">
-			<div class="circle uno"></div>
-			<div class="circle due"></div>
-			<div class="circle tre"></div>
-		</div>
+				<div class="circle uno"></div>
+				<div class="circle due"></div>
+				<div class="circle tre"></div>
+			</div>
 
 
 			<div id="scroll">
@@ -76,6 +73,22 @@
 							<h3>— 2017</h3>
 							<h2>Der rote Faden</h2>
 							<h3>interactive website</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="boxwrapper" id="box4">
+					<a href="proj_balls.html">
+						<div class="cover four">
+						</div>
+
+						<div class="box yellow">
+						</div>
+
+						<div class="info">
+							<h3>— 2017</h3>
+							<h2>Collection of Balls</h2>
+							<h3>3D-Renderings in Cinema 4D</h3>
 						</div>
 					</a>
 				</div>
