added new project-sites

--- a/proj_balls.html
+++ b/proj_balls.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>laura-gyr.ch // projects – Der rote Faden</title>
+  <title>laura-gyr.ch // projects – Refugees in Europe</title>
 
   <link rel="stylesheet" type="text/css" href="css/generalstyles.css">
   <link rel="stylesheet" type="text/css" href="css/projects.css">
@@ -17,33 +17,40 @@
 
   <div class="left wow slideInUp">
     <h3>– 2017</h3>
-    <h2>Der rote Faden</h2>
+    <h2>Collection of Balls</h2>
     <div class=" facts wow slideInUp">
       <p class="bold">type of project:</p>
-      <p>interactive website as a group project</p>
+      <p>renderings of different situations with balls</p>
     </div>
     <div class="facts">
       <p class="bold">techniques:</p>
-      <p>HTML, CSS, JS, Illustrator</p>
+      <p>Cinema 4D</p>
     </div>
   </div>
   </div>
   <div class="right wow slideInUp">
-    <h1>This interactive website should help people to navigate around Viscosistadt in Emmenbrücke. It builds connections between companies that the user can explore and therefore built their own pattern.</h1>
-    <a href="https://contrastmap.herokuapp.com/#/" target="_blank">check out prototype</a>
+    <h1>For a workshop about Cinema 4D I tried different materials and light settings for 3D-Renderings and animations with balls.</h1>
   </div>
 
 
   <div class="project">
-    <img class="wow slideInUp" src="assets/projects/Faden01.png">
-    <img class="wow slideInUp" src="assets/projects/Faden02.png">
-    <img class="wow slideInUp" src="assets/projects/Faden03.png">
-    <img class="wow slideInUp" src="assets/projects/Faden04.png">
+    <img class="wow slideInUp" src="assets/projects/Balls_HDRI_01.jpg">
+    <img class="wow slideInUp" src="assets/projects/Balls_HDRI_02.jpg">
+    <video class="wow slideInUp" width="100%" height="auto" autoplay muted loop>
+      <source src="assets/projects/Balls_HDRI_video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <img class="wow slideInUp" src="assets/projects/Balls_Cornell.jpg">
+    <img class="wow slideInUp" src="assets/projects/Balls_Haare.jpg">
+    <video class="wow slideInUp" width="100%" height="auto" autoplay muted loop>
+      <source src="assets/projects/Balls_Gum-Anim.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
   </div>
 
   <div class="next">
     <div class="wow slideInUp nextbox">
-      <a href="proj_balls.html"></a>
+      <a href="proj_faden.html"></a>
       <h3>next project<br>>></h3>
     </div>
     <div id="totop">
