cleaned script-part in html

--- a/index.html
+++ b/index.html
@@ -98,22 +98,17 @@
 	</div>
 
 	<script src="js/scroll.js" type="text/javascript"></script>
+	<script src="js/bug-fixing.js" type="text/javascript"></script>
 	<script src="js/menu-animation.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
-	<script>
-		new fullpage('#fullpage', {
-			licenseKey: "C72E5B6D-CE994D20-99674098-179F44DF",
-			autoScrolling: true,
-			scrollHorizontally: true,
-		});
-
-		var element1 = document.getElementById('container');
-		var element2 = document.getElementById('intro');
-
-		element1.style.height = null;
-		element2.style.height = null;
-	</script>
+<script>
+	new fullpage('#fullpage', {
+		licenseKey: "C72E5B6D-CE994D20-99674098-179F44DF"/*OPEN-SOURCE-GPLV3-LICENSE*/,
+		autoScrolling: true,
+		scrollHorizontally: true,
+	});
+</script>
 </body>
 
 </html>
