added content for new projects

--- a/index.html
+++ b/index.html
@@ -93,6 +93,38 @@
 					</a>
 				</div>
 
+				<div class="boxwrapper" id="box5">
+					<a href="proj_adoptions.html">
+						<div class="cover five">
+						</div>
+
+						<div class="box violet">
+						</div>
+
+						<div class="info">
+							<h3>— 2017</h3>
+							<h2>Adoptions in Switzerland</h2>
+							<h3>infographic and educational animation video</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="boxwrapper" id="box6">
+					<a href="proj_idiot.html">
+						<div class="cover six">
+						</div>
+
+						<div class="box yellow">
+						</div>
+
+						<div class="info">
+							<h3>— 2017</h3>
+							<h2>Walk Idiot Walk</h2>
+							<h3>2D animation video</h3>
+						</div>
+					</a>
+				</div>
+
 			</div>
 		</div>
 	</div>
