--- a/proj_balls.html
+++ b/proj_balls.html
@@ -50,7 +50,7 @@
 
   <div class="next">
     <div class="wow slideInUp nextbox">
-      <a href="proj_faden.html"></a>
+      <a href="proj_adoptions.html"></a>
       <h3>next project<br>>></h3>
     </div>
     <div id="totop">
