--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
 <script>
 	new fullpage('#fullpage', {
-		licenseKey: "C72E5B6D-CE994D20-99674098-179F44DF"/*OPEN-SOURCE-GPLV3-LICENSE*/,
+		licenseKey: OPEN-SOURCE-GPLV3-LICENSE,
 		autoScrolling: true,
 		scrollHorizontally: true,
 	});
