--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
 <script>
 	new fullpage('#fullpage', {
-		licenseKey: OPEN-SOURCE-GPLV3-LICENSE,
+		licenseKey:"OPEN",
 		autoScrolling: true,
 		scrollHorizontally: true,
 	});
