made some chances because of launch

--- a/proj_adoptions.html
+++ b/proj_adoptions.html
@@ -17,7 +17,7 @@
 
   <div class="left wow slideInUp">
     <h3>– 2017</h3>
-    <h2>Adoptions in Switzerland</h2>
+    <h2>Evolution Adoption</h2>
     <div class=" facts wow slideInUp">
       <p class="bold">type of project:</p>
       <p>infographic, educational animation video</p>
@@ -29,7 +29,7 @@
   </div>
   </div>
   <div class="right wow slideInUp">
-    <h1>In this project I looked at the progress of adoptions in switzerland. It compares data from 1985 to numbers of 2015 from the Federal Statistical Office. Additional to that I made a short animation-video about the topic.</h1>
+    <h1>In this project I looked at the progress of adoptions in Switzerland. It compares data from 1985 to numbers of 2015 from the Federal Statistical Office. Additional to that I made a short animation-video about the topic.</h1>
     <a href="#video">watch the animation video</a>
   </div>
 
