--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 						<div class="info">
 							<h3>— 2017</h3>
-							<h2>Adoptions in Switzerland</h2>
+							<h2>Evolution Adoption</h2>
 							<h3>infographic and educational animation video</h3>
 						</div>
 					</a>
@@ -134,13 +134,13 @@
 	<script src="js/menu-animation.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
-<script>
+<!--<script>
 	new fullpage('#fullpage', {
-		licenseKey:"OPEN",
+		/*licenseKey:"OPEN",*/
 		autoScrolling: true,
 		scrollHorizontally: true,
 	});
-</script>
+</script>-->
 </body>
 
 </html>
