some more changes because of launch

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="info">
 							<h3>— 2017</h3>
 							<h2>Evolution Adoption</h2>
-							<h3>infographic and educational animation video</h3>
+							<h3>infographic and animation video</h3>
 						</div>
 					</a>
 				</div>
