--- a/proj_adoptions.html
+++ b/proj_adoptions.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>laura-gyr.ch // projects – Adoptions in Switzerland</title>
+  <title>lauragyr.ch // projects – Adoptions in Switzerland</title>
 
   <link rel="stylesheet" type="text/css" href="css/generalstyles.css">
   <link rel="stylesheet" type="text/css" href="css/projects.css">
