chaning text in about

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body onload="document.body.style.opacity='1'">
 <div id="menubar" onclick="switchWhite()"></div>
 <div class="about wow slideInUp">
-  <h3>I'm laura, a digital ideation student who's passionate about technology, animation and typography. My work is very wide-spread when it comes to design and technology.</h3>
+  <h3>I'm laura, a digital ideation student who's passionate about technology, animation and typography.</h3>
   <div class="button cv wow slideInUp">
     <a href="assets/CV_LauraGyr.pdf" target="blank"></a>
     <p>see my CV<br>>></p>
