--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body onload="document.body.style.opacity='1'">
 <div id="menubar" onclick="switchWhite()"></div>
 <div class="about wow slideInUp">
-  <h3>I'm laura, a digital ideation student who's passionate about new technology, animation and typography.I work on digital solutions for websites and information design.</h3>
+  <h3>I'm laura, a digital ideation student who's passionate about new technology, animation and typography. I love to make complex content look simple and understandable.</h3>
   <div class="button cv wow slideInUp">
     <a href="assets/CV_LauraGyr.pdf" target="blank"></a>
     <p>see my CV<br>>></p>
