--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <p>see my CV<br>>></p>
   </div>
   <div class="button mail wow slideInUp">
-		<a href="mailto:hej@laura-gyr.ch"></a>
+		<a href="mailto:hej@lauragyr.ch"></a>
     <p>email me<br>>></p>
   </div>
   <div class="footnote wow slideInUp">
