added new cv-pdf

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <div class="about wow slideInUp">
   <h3>I'm laura, a digital ideation student who's passionate about new technology, animation and typography. I love to make complex content look simple and understandable.</h3>
   <div class="button cv wow slideInUp">
-    <a href="assets/CV_Laura.pdf" target="blank"></a>
+    <a href="assets/CV_LauraGyr_19.pdf" target="blank"></a>
     <p>see my CV<br>>></p>
   </div>
   <div class="button mail wow slideInUp">
