added kantar-link, changed color of links in projects

--- a/proj_ref.html
+++ b/proj_ref.html
@@ -18,7 +18,7 @@
   <div class="left wow slideInUp">
     <h3>– 2018</h3>
     <h2>Refugees in Europe</h2>
-    <div class=" facts wow slideInUp">
+    <div class="facts wow slideInUp">
       <p class="bold">type of project:</p>
       <p>data visualization</p>
     </div>
@@ -28,10 +28,11 @@
     </div>
   </div>
   </div>
-  <div class="right wow slideInUp">
+  <div id="addlink" class="right wow slideInUp">
     <h1>How does the number of refugees compare to the number of citizens in each European country, and where did they
       come from?</h1>
     <a href="http://yaay.ch/refugees-in-europe/" target="_blank">check out project</a>
+    <a href="https://www.informationisbeautifulawards.com/showcase/3048-european-asylum-is-a-diverse-story" id="kantar" target="_blank">Longlist of Information is Beautiful Awards 2018</a>
   </div>
 
 
