added noumenon-project to website

--- a/index.html
+++ b/index.html
@@ -32,10 +32,21 @@
 
 		<div id="container" class="section">
 			<div id="containerscroll">
-
 				<div class="boxwrapper" id="box1">
-					<a href="proj_ref.html">
+					<a href="proj_noumenon.html">
 						<div class="cover one"></div>
+						<div class="box violet"></div>
+						<div class="info">
+							<h3>— 2019</h3>
+							<h2>Noumenon</h2>
+							<h3>interactive installation with real-time-data</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="boxwrapper" id="box2">
+					<a href="proj_ref.html">
+						<div class="cover two"></div>
 						<div class="box violet"></div>
 						<div class="info">
 							<h3>— 2018</h3>
@@ -45,9 +56,9 @@
 					</a>
 				</div>
 
-				<div class="boxwrapper" id="box2">
+				<div class="boxwrapper" id="box3">
 					<a href="proj_bees.html">
-						<div class="cover two">
+						<div class="cover three">
 						</div>
 
 						<div class="box yellow">
@@ -61,9 +72,9 @@
 					</a>
 				</div>
 
-				<div class="boxwrapper" id="box3">
+				<div class="boxwrapper" id="box4">
 					<a href="proj_faden.html">
-						<div class="cover three">
+						<div class="cover four">
 						</div>
 
 						<div class="box violet">
@@ -77,9 +88,9 @@
 					</a>
 				</div>
 
-				<div class="boxwrapper" id="box4">
+				<div class="boxwrapper" id="box5">
 					<a href="proj_balls.html">
-						<div class="cover four">
+						<div class="cover five">
 						</div>
 
 						<div class="box yellow">
@@ -93,9 +104,9 @@
 					</a>
 				</div>
 
-				<div class="boxwrapper" id="box5">
+				<div class="boxwrapper" id="box6">
 					<a href="proj_adoptions.html">
-						<div class="cover five">
+						<div class="cover six">
 						</div>
 
 						<div class="box violet">
@@ -109,9 +120,9 @@
 					</a>
 				</div>
 
-				<div class="boxwrapper" id="box6">
+				<div class="boxwrapper" id="box7">
 					<a href="proj_idiot.html">
-						<div class="cover six">
+						<div class="cover seven">
 						</div>
 
 						<div class="box yellow">
@@ -134,7 +145,7 @@
 	<script src="js/menu-animation.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.js" type="text/javascript"></script>
 	<script src="plugins/fullpage.extensions.min.js" type="text/javascript"></script>
-<!--<script>
+	<!--<script>
 	new fullpage('#fullpage', {
 		/*licenseKey:"OPEN",*/
 		autoScrolling: true,
